<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        tools:context=".ui.ReportsActivity">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="50dp"
            android:indeterminateTint="@color/folly"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="90dp"
            android:layout_height="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/dummy_image" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon"
            tools:text="boAt Hearables" />

        <TextView
            android:id="@+id/tv_package_and_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="@id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            tools:text="com.boAt.hearables (1.2.8)"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_permission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toStartOf="@id/cardview_tracker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_package_and_version">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/iv_permission_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_permissions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_permission_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/permissions_label"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/iv_permission_icon"
                    app:layout_constraintTop_toTopOf="@id/iv_permission_icon" />

                <TextView
                    android:id="@+id/tv_permission_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/folly"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_permission_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_permission_label"
                    tools:text="33" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_tracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/cardview_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardview_permission"
            app:layout_constraintTop_toTopOf="@id/cardview_permission">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/iv_tracker_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_trackers"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_tracker_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/trackers_label"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/iv_tracker_icon"
                    app:layout_constraintTop_toTopOf="@id/iv_tracker_icon" />

                <TextView
                    android:id="@+id/tv_tracker_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_tracker_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_tracker_label"
                    tools:text="10" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.example.permissionanalzyer.ui.GaugeView
            android:id="@+id/gaugeView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_permission" />

        <TextView
            android:id="@+id/tv_privacy_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/privacy_risk"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gaugeView"
            tools:text="Privacy Risk :" />


        <TextView
            android:id="@+id/tv_privacy_risk_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_privacy_risk"
            app:layout_constraintStart_toStartOf="@+id/tv_privacy_risk"
            app:layout_constraintTop_toBottomOf="@+id/tv_privacy_risk"
            tools:text="Moderate" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_permission_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_privacy_risk_result">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_permission_list_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/label_permission_list"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_permission_list"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scrollbars="vertical"
                    app:layout_constraintTop_toBottomOf="@id/tv_permission_list_label"
                    tools:itemCount="40"
                    tools:listitem="@layout/permission_card"
                    tools:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_no_permission_data"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/icon_error"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/tv_no_permission_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_permission_list_label"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_no_permission_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_permissions_found"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_no_permission_data"
                    tools:visibility="visible" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_permission_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_no_permission_data,iv_no_permission_data" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_tracker_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/card_permission_list">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_tracker_list_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/label_tracker_list"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tracker_list"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_tracker_list_label"
                    tools:itemCount="15"
                    tools:listitem="@layout/permission_card"
                    tools:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_no_tracker_data"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/icon_error"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/tv_no_tracker_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_tracker_list_label"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_no_tracker_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_trackers_found"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_no_tracker_data"
                    tools:visibility="visible" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_tracker_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_no_tracker_data,iv_no_tracker_data" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
